GNOME Bugzilla – Bug 756675
wayland: Set the xdg_popup pointer even when not mapping
Last modified: 2015-10-16 03:32:40 UTC
If we immediately dismiss the popup, we still need to set the surface->xdg_popup pointer field in order for the destructor to properly clean up the state. Not doing this may cause a crash if the xdg_popup resource that was immediately dismissed is destoryed after wl_surface during client destruction.
Created attachment 313411 [details] [review] wayland: Set the xdg_popup pointer even when not mapping
Review of attachment 313411 [details] [review]: Nice catch, thanks.
Attachment 313411 [details] pushed as d6d377a - wayland: Set the xdg_popup pointer even when not mapping